--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
+    "date-fns": "^2.30.0",
+    "date-utils": "^1.2.21",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mysql": "^2.18.1"
