--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "date-utils": "^1.2.21",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.5.1"
   }
 }
