--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
+    "@tiptap/vue-3": "^2.0.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-vue-3": "^0.5.1",
