--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "roboto-fontface": "*",
     "vue": "^3.3.4",
     "vue-router": "^4.0.13",
+    "vue3-quill": "^0.3.0",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
