--- a/backend/package.json
+++ b/backend/package.json
@@ -18,5 +18,10 @@
     "jsonwebtoken": "^9.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.5.1"
+  },
+  "devDependencies": {
+    "@types/multer": "^1.4.7",
+    "multer": "^1.4.5-lts.1",
+    "tsconfig-paths": "^4.2.0"
   }
 }
