--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "date-utils": "^1.2.21",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mysql": "^2.18.1",
     "mysql2": "^3.5.1"
   },
