--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/multer": "^1.4.7",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
     "tsconfig-paths": "^4.2.0"
   }
 }
