--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
     "pinia": "^2.1.4",
+    "pinia-plugin-persist": "^1.0.0",
     "prettier": "^3.0.0",
     "roboto-fontface": "*",
     "vue": "^3.3.4",
