--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.0",
     "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
+    "moment-timezone": "^0.5.43",
     "pinia": "^2.1.4",
     "pinia-plugin-persist": "^1.0.0",
     "prettier": "^3.0.0",
